force-app/main/default/objects/Contact/fields/Account_Inferred_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Inferred_Status__c</fullName>
    <formula>Account.DaScoopComposer__Inferred_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Inferred Status</label>
    <type>Text</type>
</CustomField>