force-app/main/default/objects/Contact/fields/Account_Name_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_TEXT__c</fullName>
    <formula>(Account.Name)</formula>
    <label>Account Name (TEXT)</label>
    <type>Text</type>
</CustomField>