force-app/main/default/objects/Contact/fields/Account_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type_ID__c</fullName>
    <formula>Account.RecordType.Id</formula>
    <label>Account Record Type ID</label>
    <type>Text</type>
</CustomField>