force-app/main/default/objects/Contact/fields/AIP__c.field-meta.xml
<CustomField>
    <fullName>AIP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AIP</label>
    <type>Checkbox</type>
</CustomField>