force-app/main/default/objects/Contact/fields/asknicely__csatscore__c.field-meta.xml
<CustomField>
    <fullName>asknicely__csatscore__c</fullName>
    <label>CSAT Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>