force-app/main/default/objects/Contact/fields/asknicely__fivestar_comment__c.field-meta.xml
<CustomField>
    <fullName>asknicely__fivestar_comment__c</fullName>
    <label>Five Star Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>