force-app/main/default/objects/Contact/fields/asknicely__FIVESTAR_SurveyTag__c.field-meta.xml
<CustomField>
    <fullName>asknicely__FIVESTAR_SurveyTag__c</fullName>
    <label>Five Star Survey Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>