force-app/main/default/objects/Contact/fields/asknicely__fivestarscore__c.field-meta.xml
<CustomField>
    <fullName>asknicely__fivestarscore__c</fullName>
    <label>Five Star Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>