force-app/main/default/objects/Contact/fields/asknicely__NPS_SurveyTag__c.field-meta.xml
<CustomField>
    <fullName>asknicely__NPS_SurveyTag__c</fullName>
    <label>NPS Survey Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>