force-app/main/default/objects/Contact/fields/asknicely__NPS_Type__c.field-meta.xml
<CustomField>
    <fullName>asknicely__NPS_Type__c</fullName>
    <description>Promoter - Contacted scored 9-10
Passive - Contacted scored 7-8
Detractor -Contacted scored 0-6</description>
    <inlineHelpText>Whether a customer is a promoter, passive or detractor</inlineHelpText>
    <label>NPS Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Promoter</fullName>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
            <value>
                <fullName>Detractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>