force-app/main/default/objects/Contact/fields/asknicely__npsscore__c.field-meta.xml
<CustomField>
    <fullName>asknicely__npsscore__c</fullName>
    <description>Last NPS Score</description>
    <label>NPS Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>