force-app/main/default/objects/Contact/fields/BCR_Note__c.field-meta.xml
<CustomField>
    <fullName>BCR_Note__c</fullName>
    <label>BCR Note</label>
    <type>TextArea</type>
</CustomField>