force-app/main/default/objects/Contact/fields/Campaign_Count__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Count__c</fullName>
    <description>The number of campaigns that a contact has responded to</description>
    <inlineHelpText>The number of campaigns that a contact has responded to</inlineHelpText>
    <label>Campaign Count (Responded)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>