force-app/main/default/objects/Contact/fields/celigo_sfnsio__NetSuite_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>celigo_sfnsio__NetSuite_Sync_Error__c</fullName>
    <label>NetSuite Sync Error (IO)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>