force-app/main/default/objects/Contact/fields/celigo_sfnsio__Test_Mode_Record__c.field-meta.xml
<CustomField>
    <fullName>celigo_sfnsio__Test_Mode_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Prerequisite: Enable &quot;Test mode&quot; from your IO General settings page. Enable the checkbox to sync records and test your IO version. If you leave the &quot;Send as test record to IO&quot; box unchecked, we will sync records via the v2 version.</inlineHelpText>
    <label>Send as test record to IO</label>
    <type>Checkbox</type>
</CustomField>