force-app/main/default/objects/Contact/fields/Clari_Modified_Contact_c__c.field-meta.xml
<CustomField>
    <fullName>Clari_Modified_Contact_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clari Modified Contact</label>
    <type>Checkbox</type>
</CustomField>