force-app/main/default/objects/Contact/fields/Clari_Modified_Contact_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Clari_Modified_Contact_Date_c__c</fullName>
    <label>Clari Modified Contact Date</label>
    <type>DateTime</type>
</CustomField>