force-app/main/default/objects/Contact/fields/Client_Team__c.field-meta.xml
<CustomField>
    <fullName>Client_Team__c</fullName>
    <label>Client Team</label>
    <length>100</length>
    <type>Text</type>
</CustomField>