force-app/main/default/objects/Contact/fields/Contact_Archive_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contact_Archive_Notes__c</fullName>
    <description>Allows to document notes from RingLead integration for contacts</description>
    <inlineHelpText>Allows to document notes from RingLead integration for contacts</inlineHelpText>
    <label>Contact Archive Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>