force-app/main/default/objects/Contact/fields/Contact_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Case_Safe_ID__c</fullName>
    <formula>CaseSafeID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Case Safe ID</label>
    <type>Text</type>
</CustomField>