force-app/main/default/objects/Contact/fields/Contact_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_ID__c</fullName>
    <formula>Owner.Id</formula>
    <label>Contact Owner ID</label>
    <type>Text</type>
</CustomField>