force-app/main/default/objects/Contact/fields/Converted__c.field-meta.xml
<CustomField>
    <fullName>Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did this come from a converted Lead?</description>
    <inlineHelpText>Did this come from a converted Lead?</inlineHelpText>
    <label>Converted?</label>
    <type>Checkbox</type>
</CustomField>