force-app/main/default/objects/Contact/fields/Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Converted_Date__c</fullName>
    <description>If Contact was created from a converted lead, what date did that occur?</description>
    <formula>IF( Converted__c  = TRUE,
CreatedDate ,
NULL)</formula>
    <inlineHelpText>If Contact was created from a converted lead, what date did that occur?</inlineHelpText>
    <label>Converted Date</label>
    <type>Date</type>
</CustomField>