force-app/main/default/objects/Contact/fields/Date_Moved_to_SQL__c.field-meta.xml
<CustomField>
    <fullName>Date_Moved_to_SQL__c</fullName>
    <label>Date Moved to SQL</label>
    <type>Date</type>
</CustomField>