force-app/main/default/objects/Contact/fields/Date_of_Most_Recent_Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Most_Recent_Marketing_Campaign__c</fullName>
    <description>This date should continuously update with the date the campaign member was added to the campaign in Most Recent Marketing Campaign.</description>
    <label>Date of Most  Recent Marketing Campaign</label>
    <type>Date</type>
</CustomField>