force-app/main/default/objects/Contact/fields/Days_since_latest_touch__c.field-meta.xml
<CustomField>
    <fullName>Days_since_latest_touch__c</fullName>
    <formula>TODAY() - DATEVALUE(Groove_Last_Touch__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since last touch (Absolute)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>