force-app/main/default/objects/Contact/fields/Direct_Mail__c.field-meta.xml
<CustomField>
    <fullName>Direct_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Mail</label>
    <type>Checkbox</type>
</CustomField>