force-app/main/default/objects/Contact/fields/Email_Validation_Result__c.field-meta.xml
<CustomField>
    <fullName>Email_Validation_Result__c</fullName>
    <description>Indicates whether or not the given email was successful during outbound activity</description>
    <inlineHelpText>Indicates whether or not the given email was successful during outbound activity</inlineHelpText>
    <label>Email Validation Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>