force-app/main/default/objects/Contact/fields/Event_s_attended__c.field-meta.xml
<CustomField>
    <fullName>Event_s_attended__c</fullName>
    <label>Event(s) attended</label>
    <length>100</length>
    <type>Text</type>
</CustomField>