force-app/main/default/objects/Contact/fields/Event_Source__c.field-meta.xml
<CustomField>
    <fullName>Event_Source__c</fullName>
    <label>Event Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bring Cannes to You (London)</fullName>
            </value>
            <value>
                <fullName>Bring Cannes to You (Chicago)</fullName>
            </value>
            <value>
                <fullName>Bring Cannes to You (LA)</fullName>
            </value>
            <value>
                <fullName>Brand Safety Email 2017</fullName>
            </value>
            <value>
                <fullName>DMEXCO 2017</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>