force-app/main/default/objects/Contact/fields/Functional_Role__c.field-meta.xml
<CustomField>
    <fullName>Functional_Role__c</fullName>
    <description>Please select the area of responsibility this person currently holds</description>
    <inlineHelpText>Please select the area of responsibility this person currently holds</inlineHelpText>
    <label>Functional Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Functional_Role</valueSetName>
    </valueSet>
</CustomField>