force-app/main/default/objects/Contact/fields/Grade_Formula__c.field-meta.xml
<CustomField>
    <fullName>Grade_Formula__c</fullName>
    <formula>Text( Account.Grade__c )</formula>
    <inlineHelpText>Editable on the Account.</inlineHelpText>
    <label>Grade</label>
    <type>Text</type>
</CustomField>