force-app/main/default/objects/Contact/fields/Groove_Active_Flows_Count__c.field-meta.xml
<CustomField>
    <fullName>Groove_Active_Flows_Count__c</fullName>
    <description>Displays the amount of flows this person is active in</description>
    <label>Active Flows Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>