force-app/main/default/objects/Contact/fields/Groove_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Groove_Engagement_Score__c</fullName>
    <label>Engagement Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>