force-app/main/default/objects/Contact/fields/Groove_Last_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Groove_Last_Engagement__c</fullName>
    <label>Last Engagement</label>
    <type>DateTime</type>
</CustomField>