force-app/main/default/objects/Contact/fields/Groove_Last_Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Groove_Last_Flow_Name__c</fullName>
    <label>Last Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>