force-app/main/default/objects/Contact/fields/Groove_Last_Flow_Status__c.field-meta.xml
<CustomField>
    <fullName>Groove_Last_Flow_Status__c</fullName>
    <label>Last Flow Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>