force-app/main/default/objects/Contact/fields/Groove_Last_Flow_Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Groove_Last_Flow_Step_Number__c</fullName>
    <label>Last Flow Step Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>