force-app/main/default/objects/Contact/fields/Groove_Last_Flow_Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Groove_Last_Flow_Step_Type__c</fullName>
    <label>Last Flow Step Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>