force-app/main/default/objects/Contact/fields/Groove_Last_Step_Completed__c.field-meta.xml
<CustomField>
    <fullName>Groove_Last_Step_Completed__c</fullName>
    <label>Last Step Completed</label>
    <type>DateTime</type>
</CustomField>