force-app/main/default/objects/Contact/fields/Groove_Last_Step_Skipped__c.field-meta.xml
<CustomField>
    <fullName>Groove_Last_Step_Skipped__c</fullName>
    <description>Date of the step this person skipped in the Flow they were most recently added to</description>
    <label>Last Step Skipped</label>
    <length>50</length>
    <type>Text</type>
</CustomField>