force-app/main/default/objects/Contact/fields/Groove_Last_Touch_Type__c.field-meta.xml
<CustomField>
    <fullName>Groove_Last_Touch_Type__c</fullName>
    <label>Last Touch Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>