force-app/main/default/objects/Contact/fields/Groove_Outbound_Email_Counter__c.field-meta.xml
<CustomField>
    <fullName>Groove_Outbound_Email_Counter__c</fullName>
    <description>Number of Outbound Emails sent to this Lead</description>
    <inlineHelpText>Number of Outbound Emails sent to this Lead</inlineHelpText>
    <label>Outbound Email Counter</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>