force-app/main/default/objects/Contact/fields/Groove_Overdue_Days__c.field-meta.xml
<CustomField>
    <fullName>Groove_Overdue_Days__c</fullName>
    <description>This will display the amount of days each contact or lead is overdue by in their flow.</description>
    <formula>(5 * FLOOR(TODAY() - DATE( 1900, 1, 8) ) / 7 )
+ MIN( 5, MOD(TODAY() - DATE( 1900, 1, 8), 7)) -

(5 * FLOOR( ( Groove_Next_Step_Due_Date__c - DATE( 1900, 1, 8) ) / 7 )
+ MIN( 5, MOD( Groove_Next_Step_Due_Date__c - DATE( 1900, 1, 8), 7 ) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>