force-app/main/default/objects/Contact/fields/Hubspot_Form_Comments__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Form_Comments__c</fullName>
    <label>Hubspot Form Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>