force-app/main/default/objects/Contact/fields/I_m_Here_to_Learn_About__c.field-meta.xml
<CustomField>
    <fullName>I_m_Here_to_Learn_About__c</fullName>
    <label>I&apos;m Here to Learn About</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertising Solutions</fullName>
            </value>
            <value>
                <fullName>Visual Intelligence/Social Media Solutions</fullName>
            </value>
            <value>
                <fullName>Publisher Solutions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>