force-app/main/default/objects/Contact/fields/Invalid_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Email_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the email address is updated, the checkbox should uncheck if it was previously checked. This will allow sellers to easily keep track of contacts that we may not have the right email address of or who may have left the company that we&apos;re not aware of.</description>
    <inlineHelpText>This field will check off when an email bounces from Hubspot</inlineHelpText>
    <label>Invalid Email Address</label>
    <type>Checkbox</type>
</CustomField>