force-app/main/default/objects/Contact/fields/Invite_to_2018_Cannes_Pool_Party__c.field-meta.xml
<CustomField>
    <fullName>Invite_to_2018_Cannes_Pool_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invite to 2018 Boston Cannes Pool Party</label>
    <type>Checkbox</type>
</CustomField>