force-app/main/default/objects/Contact/fields/IP_State__c.field-meta.xml
<CustomField>
    <fullName>IP_State__c</fullName>
    <label>IP State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>