force-app/main/default/objects/Contact/fields/Last_Active__c.field-meta.xml
<CustomField>
    <fullName>Last_Active__c</fullName>
    <label>Last Active</label>
    <type>DateTime</type>
</CustomField>