force-app/main/default/objects/Contact/fields/Last_Activity_by_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_by_Sales_Rep__c</fullName>
    <label>Last Activity by Sales Rep</label>
    <type>Date</type>
</CustomField>