force-app/main/default/objects/Contact/fields/Last_Lifecycle_Stage_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Lifecycle_Stage_Change_Date__c</fullName>
    <label>Last Lifecycle Stage Change Date</label>
    <type>Date</type>
</CustomField>