force-app/main/default/objects/Contact/fields/Lock_Account__c.field-meta.xml
<CustomField>
    <fullName>Lock_Account__c</fullName>
    <formula>Converted__c</formula>
    <label>Lock Account?</label>
    <type>Checkbox</type>
</CustomField>