force-app/main/default/objects/Contact/fields/Most_Recent_Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Marketing_Campaign__c</fullName>
    <label>Most Recent  Marketing Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>