force-app/main/default/objects/Contact/fields/My_Role_Involves__c.field-meta.xml
<CustomField>
    <fullName>My_Role_Involves__c</fullName>
    <label>My Role Involves</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Media Buying</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>