force-app/main/default/objects/Contact/fields/No_longer_with_account__c.field-meta.xml
<CustomField>
    <fullName>No_longer_with_account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is checked when the contact is no longer with the account.</description>
    <inlineHelpText>This checkbox is checked when the contact is no longer with the account.</inlineHelpText>
    <label>No Longer With Account</label>
    <type>Checkbox</type>
</CustomField>