force-app/main/default/objects/Contact/fields/Open_Market__c.field-meta.xml
<CustomField>
    <fullName>Open_Market__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Market</label>
    <type>Checkbox</type>
</CustomField>