force-app/main/default/objects/Contact/fields/Original_Owner__c.field-meta.xml
<CustomField>
    <fullName>Original_Owner__c</fullName>
    <label>Original Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>